// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert CloseButton and cancelButton are working 1`] = `
<section
  aria-describedby="chakra-modal--body-:r5:"
  aria-labelledby="chakra-modal--header-:r5:"
  aria-modal="true"
  class="chakra-modal__content css-6yiygt"
  id="chakra-modal-:r5:"
  role="alertdialog"
  style="opacity: 0; transform: scale(0.95) translateZ(0);"
  tabindex="-1"
>
  <header
    class="chakra-modal__header css-1jynom4"
    id="chakra-modal--header-:r5:"
  >
    Burger verwijderen uit huishouden
  </header>
  <button
    aria-label="Close"
    class="chakra-modal__close-btn css-6sdaxy"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="chakra-icon css-onkibi"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M.439,21.44a1.5,1.5,0,0,0,2.122,2.121L11.823,14.3a.25.25,0,0,1,.354,0l9.262,9.263a1.5,1.5,0,1,0,2.122-2.121L14.3,12.177a.25.25,0,0,1,0-.354l9.263-9.262A1.5,1.5,0,0,0,21.439.44L12.177,9.7a.25.25,0,0,1-.354,0L2.561.44A1.5,1.5,0,0,0,.439,2.561L9.7,11.823a.25.25,0,0,1,0,.354Z"
        fill="currentColor"
      />
    </svg>
  </button>
  <div
    class="chakra-modal__body css-0"
    id="chakra-modal--body-:r5:"
  >
    Weet je zeker dat je Chris de Burg wil verwijderen uit het huishouden de Jager-de Burg?
  </div>
  <footer
    class="chakra-modal__footer css-192qrng"
  >
    <button
      class="chakra-button css-4xx2wk"
      type="button"
    >
      global.actions.cancel
    </button>
    <button
      class="chakra-button css-1i56vmk"
      type="button"
    >
      Verwijderen
    </button>
  </footer>
</section>
`;

exports[`Alert Shows the Alert 1`] = `
<section
  aria-describedby="chakra-modal--body-:r0:"
  aria-labelledby="chakra-modal--header-:r0:"
  aria-modal="true"
  class="chakra-modal__content css-6yiygt"
  id="chakra-modal-:r0:"
  role="alertdialog"
  style="opacity: 0; transform: scale(0.95) translateZ(0);"
  tabindex="-1"
>
  <header
    class="chakra-modal__header css-1jynom4"
    id="chakra-modal--header-:r0:"
  >
    Burger verwijderen uit huishouden
  </header>
  <button
    aria-label="Close"
    class="chakra-modal__close-btn css-6sdaxy"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="chakra-icon css-onkibi"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M.439,21.44a1.5,1.5,0,0,0,2.122,2.121L11.823,14.3a.25.25,0,0,1,.354,0l9.262,9.263a1.5,1.5,0,1,0,2.122-2.121L14.3,12.177a.25.25,0,0,1,0-.354l9.263-9.262A1.5,1.5,0,0,0,21.439.44L12.177,9.7a.25.25,0,0,1-.354,0L2.561.44A1.5,1.5,0,0,0,.439,2.561L9.7,11.823a.25.25,0,0,1,0,.354Z"
        fill="currentColor"
      />
    </svg>
  </button>
  <div
    class="chakra-modal__body css-0"
    id="chakra-modal--body-:r0:"
  >
    Weet je zeker dat je Chris de Burg wil verwijderen uit het huishouden de Jager-de Burg?
  </div>
  <footer
    class="chakra-modal__footer css-192qrng"
  >
    <button
      class="chakra-button css-4xx2wk"
      type="button"
    >
      global.actions.cancel
    </button>
  </footer>
</section>
`;
